# null-code-analyzer

./: .gitignore  ETHICS.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  install.sh  pyproject.toml  quickstart.sh  test_scanner.py  verify_setup.py
nullcode/: __init__.py  __main__.py
nullcode/core/: __init__.py  ai_engine.py  heuristics.py  scanner.py
nullcode/languages/: __init__.py  javascript.py  python.py
nullcode/models/: __init__.py  download.py
nullcode/ui/: __init__.py  animations.py  themes.py
nullcode/utils/: __init__.py  git_diff.py  html_export.py  json_export.py  sarif_export.py
tests/fixtures/: README.md  vulnerable_buffer_overflow.c  vulnerable_command_injection.py  vulnerable_deserialization.py  vulnerable_path_traversal.py  vulnerable_secrets.py  vulnerable_sql.py  vulnerable_xss.js
